--- a/source/index.html
+++ b/source/index.html
@@ -62,7 +62,7 @@
         <picture>
           <source type="image/webp" media="(max-width: 1365px)"
           srcset="img/hero-image-tablet.webp 1x, img/hero-image-tablet@2x.webp 2x">
-          <source type="image/webp" media="(max-width: 1365px)"
+          <source type="image/png" media="(max-width: 1365px)"
           srcset="img/hero-image-tablet.png 1x, img/hero-image-tablet@2x.png 2x">
           <img src="img/hero-image-desktop.png" srcset="img/hero-image-desktop@2x.png 2x" width="500" height="524"
           alt="">
@@ -87,12 +87,12 @@
               <picture>
                 <source type="image/webp" media="(max-width: 767px)"
                   srcset="img/gym-picture-mobile.webp 1x, img/gym-picture-mobile@2x.webp 2x">
+                  <source type="image/png" media="(max-width: 767px)"
+                    srcset="img/gym-picture-mobile.png 1x, img/gym-picture-mobile@2x.png 2x">
                 <source type="image/webp" media="(max-width: 1365px)"
                   srcset="img/gym-picture-tablet.webp 1x, img/gym-picture-tablet@2x.webp 2x">
-                <source type="image/png" media="(max-width: 767px)"
-                  srcset="img/gym-picture-mobile.png 1x, img/gym-picture-mobile@2x.png 2x">
-                <source type="image/png" media="(max-width: 1365px)"
-                  srcset="img/gym-picture-tablet.png 1x, img/gym-picture-tablet@2x.png 2x">
+                  <source type="image/png" media="(max-width: 1365px)"
+                    srcset="img/gym-picture-tablet.png 1x, img/gym-picture-tablet@2x.png 2x">
                 <img src="img/gym-picture-desktop.png" srcset="img/gym-picture-desktop@2x.png 2x" width="660"
                   height="401" alt="">
               </picture>
@@ -102,12 +102,12 @@
               <picture>
                 <source type="image/webp" media="(max-width: 767px)"
                   srcset="img/video-overlay-mobile.webp 1x, img/video-overlay-mobile@2x.webp 2x">
-                <source type="image/webp" media="(max-width: 767px)"
-                  srcset="img/video-overlay-mobile.png 1x, img/video-overlay-mobile@2x.png 2x">
+                  <source type="image/webp" media="(max-width: 767px)"
+                    srcset="img/video-overlay-mobile.png 1x, img/video-overlay-mobile@2x.png 2x">
                 <source type="image/webp" media="(max-width: 1365px)"
                   srcset="img/video-overlay-tablet.webp 1x, img/video-overlay-tablet@2x.webp 2x">
-                <source type="image/webp" media="(max-width: 1365px)"
-                  srcset="img/video-overlay-tablet.png 1x, img/video-overlay-tablet@2x.png 2x">
+                  <source type="image/png" media="(max-width: 1365px)"
+                    srcset="img/video-overlay-tablet.png 1x, img/video-overlay-tablet@2x.png 2x">
                 <img src="img/video-overlay-desktop.png" alt="" srcset="img/video-overlay-desktop@2x.png 2x" width="364"
                   height="228" data-video="video-media">
               </picture>
@@ -131,7 +131,7 @@
             <ul>
               <li tabindex="0">
                 <h3>С тренером</h3>
-                <p>12 занятий</p>
+                <p class="subscription__text">12 занятий</p>
                 <span data-content="5000">5000
                   <svg width="30" height="42">
                     <use href="img/sprite.svg#rouble-icon"></use>
@@ -143,7 +143,7 @@
               </li>
               <li class="is-selected" tabindex="0">
                 <h3>Дневной</h3>
-                <p>с 8:00 до 17:00</p>
+                <p class="subscription__text subscription__text--time-duration">с 8:00 до 17:00</p>
                 <span data-content="1700">1700 <svg width="30" height="42">
                     <use href="img/sprite.svg#rouble-icon"></use>
                   </svg>
@@ -152,7 +152,7 @@
               </li>
               <li tabindex="0">
                 <h3>Полный день</h3>
-                <p>с 8:00 до 22:00</p>
+                <p class="subscription__text subscription__text--time-duration">с 8:00 до 17:00</p>
                 <span data-content="2700">2700 <svg width="30" height="42">
                     <use href="img/sprite.svg#rouble-icon"></use>
                   </svg>
@@ -197,11 +197,11 @@
               <picture>
                 <source type="image/webp" media="(max-width: 767px)"
                   srcset="img/games-picture-mobile.webp 1x, img/games-picture-mobile@2x.webp 2x">
-                <source type="image/webp" media="(max-width: 767px)"
-                  srcset="img/games-picture-mobile.png 1x, img/games-picture-mobile@2x.png 2x">
+                  <source type="image/png" media="(max-width: 767px)"
+                    srcset="img/games-picture-mobile.png 1x, img/games-picture-mobile@2x.png 2x">
                 <source type="image/webp" media="(max-width: 1365px)"
                   srcset="img/games-picture-tablet.webp 1x, img/games-picture-tablet@2x.webp 2x">
-                <source type="image/webp" media="(max-width: 1365px)"
+                <source type="image/png" media="(max-width: 1365px)"
                   srcset="img/games-picture-tablet.png 1x, img/games-picture-tablet@2x.png 2x">
                 <img src="img/games-picture-desktop.png" width="660" height="500"
                   srcset="img/games-picture-desktop@2x.png 2x" alt="">
@@ -225,12 +225,12 @@
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                    <source type="image/png" media="(max-width: 767px)"
+                      srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                    <source type="image/png" media="(max-width: 1365px)"
+                      srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
                   <img src="img/swiper-slide-1-desktop.png" alt="" srcset="img/swiper-slide-1-desktop@2x.png 2x"
                     width="260" height="294">
                 </picture>
@@ -249,11 +249,11 @@
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-2-mobile.webp 1x, img/swiper-slide-2-mobile@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-2-mobile.png 1x, img/swiper-slide-2-mobile@2x.png 2x">
+                    <source type="image/png" media="(max-width: 767px)"
+                      srcset="img/swiper-slide-2-mobile.png 1x, img/swiper-slide-2-mobile@2x.png 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-2-tablet.webp 1x, img/swiper-slide-2-tablet@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-2-tablet.webp 1x, img/swiper-slide-2-tablet@2x.webp 2x">
+                  <source type="image/png" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-2-tablet.png 1x, img/swiper-slide-2-tablet@2x.png 2x">
                   <img src="img/swiper-slide-2-desktop.png" alt="" srcset="img/swiper-slide-2-desktop@2x.png 2x"
                     width="260" height="294">
@@ -273,12 +273,12 @@
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-3-mobile.webp 1x, img/swiper-slide-3-mobile@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-3-mobile.png 1x, img/swiper-slide-3-mobile@2x.png 2x">
+                    <source type="image/png" media="(max-width: 767px)"
+                      srcset="img/swiper-slide-3-mobile.png 1x, img/swiper-slide-3-mobile@2x.png 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-3-tablet.webp 1x, img/swiper-slide-3-tablet@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-3-tablet.png 1x, img/swiper-slide-3-tablet@2x.png 2x">
+                    <source type="image/png" media="(max-width: 1365px)"
+                      srcset="img/swiper-slide-3-tablet.png 1x, img/swiper-slide-3-tablet@2x.png 2x">
                   <img src="img/swiper-slide-3-desktop.png" alt="" srcset="img/swiper-slide-3-desktop@2x.png 2x"
                     width="260" height="294">
                 </picture>
@@ -297,12 +297,12 @@
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-4-mobile.webp 1x, img/swiper-slide-4-mobile@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-4-mobile.png 1x, img/swiper-slide-4-mobile@2x.png 2x">
+                    <source type="image/png" media="(max-width: 767px)"
+                      srcset="img/swiper-slide-4-mobile.png 1x, img/swiper-slide-4-mobile@2x.png 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-4-tablet.webp 1x, img/swiper-slide-4-tablet@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-4-tablet.png 1x, img/swiper-slide-4-tablet@2x.png 2x">
+                    <source type="image/png" media="(max-width: 1365px)"
+                      srcset="img/swiper-slide-4-tablet.png 1x, img/swiper-slide-4-tablet@2x.png 2x">
                   <img src="img/swiper-slide-4-desktop.png" alt="" srcset="img/swiper-slide-4-desktop@2x.png 2x"
                     width="260" height="294">
                 </picture>
@@ -321,11 +321,11 @@
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 767px)"
+                    <source type="image/png" media="(max-width: 767px)"
                     srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
-                  <source type="image/webp" media="(max-width: 1365px)"
+                    <source type="image/webp" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 1365px)"
+                  <source type="image/png" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
                   <img src="img/swiper-slide-1-desktop.png" alt="" srcset="img/swiper-slide-1-desktop@2x.png 2x"
                     width="260" height="294">
@@ -345,11 +345,11 @@
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-2-mobile.webp 1x, img/swiper-slide-2-mobile@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-2-mobile.png 1x, img/swiper-slide-2-mobile@2x.png 2x">
+                    <source type="image/png" media="(max-width: 767px)"
+                      srcset="img/swiper-slide-2-mobile.png 1x, img/swiper-slide-2-mobile@2x.png 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-2-tablet.webp 1x, img/swiper-slide-2-tablet@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-2-tablet.webp 1x, img/swiper-slide-2-tablet@2x.webp 2x">
+                  <source type="image/png" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-2-tablet.png 1x, img/swiper-slide-2-tablet@2x.png 2x">
                   <img src="img/swiper-slide-2-desktop.png" alt="" srcset="img/swiper-slide-2-desktop@2x.png 2x"
                     width="260" height="294">
@@ -369,11 +369,11 @@
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-3-mobile.webp 1x, img/swiper-slide-3-mobile@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-3-mobile.png 1x, img/swiper-slide-3-mobile@2x.png 2x">
+                    <source type="image/png" media="(max-width: 767px)"
+                      srcset="img/swiper-slide-3-mobile.png 1x, img/swiper-slide-3-mobile@2x.png 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-3-tablet.webp 1x, img/swiper-slide-3-tablet@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-3-tablet.webp 1x, img/swiper-slide-3-tablet@2x.webp 2x">
+                  <source type="image/png" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-3-tablet.png 1x, img/swiper-slide-3-tablet@2x.png 2x">
                   <img src="img/swiper-slide-3-desktop.png" alt="" srcset="img/swiper-slide-3-desktop@2x.png 2x"
                     width="260" height="294">
@@ -393,12 +393,12 @@
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-4-mobile.webp 1x, img/swiper-slide-4-mobile@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/swiper-slide-4-mobile.png 1x, img/swiper-slide-4-mobile@2x.png 2x">
+                    <source type="image/png" media="(max-width: 767px)"
+                      srcset="img/swiper-slide-4-mobile.png 1x, img/swiper-slide-4-mobile@2x.png 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-4-tablet.webp 1x, img/swiper-slide-4-tablet@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/swiper-slide-4-tablet.png 1x, img/swiper-slide-4-tablet@2x.png 2x">
+                    <source type="image/png" media="(max-width: 1365px)"
+                      srcset="img/swiper-slide-4-tablet.png 1x, img/swiper-slide-4-tablet@2x.png 2x">
                   <img src="img/swiper-slide-4-desktop.png" alt="" srcset="img/swiper-slide-4-desktop@2x.png 2x"
                     width="260" height="294">
                 </picture>
@@ -492,13 +492,13 @@
             <div class="promo__image-wrapper">
               <picture>
                 <source type="image/webp" media="(max-width: 767px)"
-                  srcset="img/promo-image-mobile.webp 1x, img/promo-image-mobile@2x.webp 2x">
+                srcset="img/promo-image-mobile.webp 1x, img/promo-image-mobile@2x.webp 2x">
+                <source type="image/png" media="(max-width: 767px)"
+                srcset="img/promo-image-mobile.png 1x, img/promo-image-mobile@2x.png 2x">
                 <source type="image/webp" media="(max-width: 1365px)"
                   srcset="img/promo-image-tablet.webp 1x, img/promo-image-tablet@2x.webp 2x">
-                <source type="image/png" media="(max-width: 767px)"
-                  srcset="img/promo-image-mobile.png 1x, img/promo-image-mobile@2x.png 2x">
                 <source type="image/png" media="(max-width: 1365px)"
-                  srcset="img/promo-image-tablet.png 1x, img/promo-image-tablet@2x.png 2x">
+                srcset="img/promo-image-tablet.png 1x, img/promo-image-tablet@2x.png 2x">
                 <img src="img/promo-image-desktop.png" srcset="img/promo-image-desktop.png 2x" width="280" height="462"
                   alt="">
               </picture>
@@ -676,7 +676,7 @@
                       srcset="img/reviews-slide-1-mobile.png 1x, img/reviews-slide-1-mobile@2x.png 2x">
                       <source type="image/webp" media="(max-width: 1365px)"
                       srcset="img/reviews-slide-1-tablet.webp 1x, img/reviews-slide-1-tablet@2x.webp 2x">
-                    <source type="image/png" media="(max-width: 1365px)"
+                      <source type="image/png" media="(max-width: 1365px)"
                       srcset="img/reviews-slide-1-tablet.png 1x, img/reviews-slide-1-tablet@2x.png 2x">
                     <img src="img/reviews-slide-1-desktop.png" srcset="img/reviews-slide-1-desktop@2x.png 2x" alt=""
                       width="80" height="80">
@@ -694,8 +694,12 @@
                   <picture>
                     <source type="image/webp" media="(max-width: 767px)"
                       srcset="img/reviews-slide-1-mobile.webp 1x, img/reviews-slide-1-mobile@2x.webp 2x">
+                      <source type="image/png" media="(max-width: 767px)"
+                      srcset="img/reviews-slide-1-mobile.png 1x, img/reviews-slide-1-mobile@2x.png 2x">
                     <source type="image/webp" media="(max-width: 1365px)"
-                      srcset="img/reviews-slide-1-tablet.png 1x, img/reviews-slide-1-tablet@2x.png 2x">
+                    srcset="img/reviews-slide-1-tablet.webp 1x, img/reviews-slide-1-tablet@2x.webp 2x">
+                      <source type="image/png" media="(max-width: 1365px)"
+                        srcset="img/reviews-slide-1-tablet.png 1x, img/reviews-slide-1-tablet@2x.png 2x">
                     <img src="img/reviews-slide-1-desktop.png" srcset="img/reviews-slide-1-desktop@2x.png 2x" alt=""
                       width="80" height="80">
                   </picture>
