--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Fitness Project" content="Сайт для фитнес центра">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="images/favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="images/favicons/apple.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="preload" href="fonts/roboto-condensed-v27-cyrillic_latin-regular.woff2" as="font" type="font/woff2"
     crossorigin="anonymous">
   <link rel="preload" href="fonts/roboto-condensed-v27-cyrillic_latin-300.woff2" as="font" type="font/woff2"
@@ -754,15 +758,15 @@
                 <h4 class="contacts__title">Адрес:</h4>
                 <p class="contacts__description">г. Омск, ул. 60 лет Октября, 7</p>
               </li>
-              <li class="contacts__item">
-                <h4 class="contacts__title">График работы:</h4>
-                <p class="contacts__description">Пн-Вс: с 8:00 до 22:00</p>
-              </li>
-              <li class="contacts__item">
+              <li class="contacts__item contacts__item--telephone">
                 <h4 class="contacts__title">Телефон:</h4>
                 <p class="contacts__description">8-800-555-55-55</p>
               </li>
-              <li class="contacts__item">
+              <li class="contacts__item contacts__item--working-hours">
+                <h4 class="contacts__title">График работы:</h4>
+                <p class="contacts__description">Пн-Вс: с 8:00 до 22:00</p>
+              </li>
+              <li class="contacts__item contacts__item--e-mail">
                 <h4 class="contacts__title">Email:</h4>
                 <p class="contacts__description">omsk@supergym.ru</p>
               </li>
